--- a/src/main/resources/templates/form/addForm.html
+++ b/src/main/resources/templates/form/addForm.html
@@ -34,6 +34,35 @@
         </div>
 
         <hr class="my-4">
+        <!-- single checkbox -->
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <!--<input type="checkbox" id="open" name="open" class="form-check-input">-->
+                <input type="checkbox" id="open" th:field="*{open}" class="form-check-input">
+                <!--체크 박스를 체크하지 않으면 스프링 MVC가 _open 만 있는 것을 확인하고, open 의 값이 체크되지 않았다고 인식한다.
+                이 경우 서버에서 Boolean 타입을 찍어보면 결과가 null 이 아니라 false 인 것을 확인할 수 있다-->
+                <input type="hidden" name="_open" value="on"/> <!-- 히든 필드 추가 -->
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <!--
+            <input type="checkbox" value="SEOUL" class="form-check-input" id="regions1" name="regions">
+            <input type="checkbox" value="BUSAN" class="form-check-input" id="regions2" name="regions">
+            <input type="checkbox" value="JEJU" class="form-check-input" id="regions3" name="regions">-->
+            <div th:each="region : ${regions}" class="form-check form-check-inline">
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}" class="form-check-input">
+                <!-- 멀티 체크박스는 같은 이름의 여러 체크박스를 만들 수 있다. 그런데 문제는 이렇게 반복해서 HTML 태그를
+                생성할 때, 생성된 HTML 태그 속성에서 name 은 같아도 되지만, id 는 모두 달라야 한다.
+                따라서 타임리프는 체크박스를 each 루프 안에서 반복해서 만들 때 임의로 1 , 2 , 3 숫자를 뒤에 붙여준다.-->
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">서울</label>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col">
